[package]
name = "scan-lib"
version = "0.1.1"
authors = ["Navonil Mandal"]
description = "A directory searcher library for rust"
license = "MIT"
homepage = "https://github.com/Nightmare9801/scan-lib"
repository = "https://github.com/Nightmare9801/scan-lib"
edition = "2021"
readme = "README.md"

[dependencies]
